--- a/styles/main.css
+++ b/styles/main.css
@@ -3,11 +3,17 @@
 	margin: 0 auto;
 }
 
+.left {
+	float: left;
+	margin-right: 10px;
+	margin-top: 10px;
+}
 
-
-
-
-
+.right	{
+	float: right;
+	margin-top: 10px;
+	margin-right: 10px;
+}
 
 
 
